Bug 1710507 - Make native menus respect the XUL element's directionality. r=emilio

This affects both native context menus and menubar menus.

Doing a flush here is fine, the nsMenuX constructor already flushes via SetupIcon()
(which also uses nsComputedDOMStyle, in nsMenuItemIconX::GetIconURI).

Differential Revision: https://phabricator.services.mozilla.com/D114785